2022 Day 01: Day 1: Calorie Counting - part 2