@@ -1,11 +1,13 @@
 package de.adventofcode.chrisgw.day01;
 
+import org.apache.commons.lang3.builder.EqualsBuilder;
+import org.apache.commons.lang3.builder.HashCodeBuilder;
+
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
-public class ElfInventory {
+public class ElfInventory implements Comparable<ElfInventory> {
 
     private final List<FoodItem> foodItems;
 
@@ -18,7 +20,7 @@ public class ElfInventory {
         List<FoodItem> foodItems = elfInventoryLines.stream()
                 .mapToInt(Integer::parseInt)
                 .mapToObj(FoodItem::new)
-                .collect(Collectors.toList());
+                .toList();
         return new ElfInventory(foodItems);
     }
 
@@ -31,6 +33,27 @@ public class ElfInventory {
         return foodItems().mapToInt(FoodItem::calories).sum();
     }
 
+
+    @Override
+    public int compareTo(ElfInventory otherInventory) {
+        return Integer.compare(this.totalFoodCalories(), otherInventory.totalFoodCalories());
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (!(o instanceof ElfInventory that)) {
+            return false;
+        }
+        return new EqualsBuilder().append(foodItems, that.foodItems).isEquals();
+    }
+
+    @Override
+    public int hashCode() {
+        return new HashCodeBuilder(17, 37).append(foodItems).toHashCode();
+    }
 
     @Override
     public String toString() {
